# and end with END <type>. Optionally, language overlay may be added.          #
# In multiline report, text is written between starting and ending line, and   #
# in the body of this report comments can't be used.                           #
################################################################################

VERSION 1.3.3 | 2017-03-10

CHANGE Nový test je automaticky označený ako hodnotený.
CHANGE [lang:english] New test is automatically set as enabled for automatic grading.

END VERSION

VERSION 1.3.2 | 2016-12-04

NEW Added MathJax javascript library to support TeX and LaTeX math in task texts.
NEW [lang:sk] Pridaná javascript knižnica MathJax na podporu matematiky z TeX a LaTeX v textoch úloh.

END VERSION

VERSION 1.3.1e | 2016-11-01

FIX Opravená chyba spôsobujúca odpojenie všetkých typov zostáv úloh zo zostáv úlov v kurze, z ktorého bol odpojený nejaký typ zostavy úloh.
FIX [lang:english] Fixed bug in task set type deletion from course causing deletion of all relations between task sets and task set types in that particular course.

END VERSION

VERSION 1.3.1d | 2016-04-24

FIX Opravená chyba spôsobujúca v niektorých prípadoch chybné zobrazovanie počtu odovzdaných riešení.
FIX [lang:english] Fixed bug displaying incorrect count of uploaded submissions in some cases.

END VERSION

VERSION 1.3.1c | 2016-03-23

CHANGE Nové testy budú mať východzí timeout nastavený na 15 sekúnd.
CHANGE [lang:english] New tests will have default timeout set to 15 seconds.

CHANGE Text z výsledku testu môže mať teraz kapacitu až 16MiB.
CHANGE [lang:english] Text from test result can have capacity 16MiB now.

END VERSION

VERSION 1.3.1b | 2016-03-16

CHANGE Posledná verzia riešenia v zozname riešení je automaticky označené na testovanie.
CHANGE [lang:english] Last version of solution in solution list is automatically selected for testing.

CHANGE Ak je úloha po termíne odosielania, zobrazí sa v zozname šedou farbou.