@@ -22,6 +22,16 @@ table.task_sets_table tfoot td { text-align: right; background-color: rgba(192,1
 table.task_sets_table thead tr th { padding: 2px; background-color: rgba(192,192,192,128); }
 table.task_sets_table thead tr th:first-child { border-top-left-radius: 4px; border-bottom-left-radius: 4px; }
 table.task_sets_table thead tr th:last-child { border-top-right-radius: 4px; border-bottom-right-radius: 4px; }
+table.task_sets_table tbody tr.task_set_time_long_after_deadline td,
+table.task_sets_table tbody tr td li.task_set_time_long_after_deadline { color: dimgray; }
+table.task_sets_table tbody tr.task_set_time_after_deadline td,
+table.task_sets_table tbody tr td li.task_set_time_after_deadline { color: red; }
+table.task_sets_table tbody tr.task_set_time_day_before_deadline td,
+table.task_sets_table tbody tr td li.task_set_time_day_before_deadline { color: orange; }
+table.task_sets_table tbody tr.task_set_time_two_days_before_deadline td,
+table.task_sets_table tbody tr td li.task_set_time_two_days_before_deadline { color: olive; }
+table.task_sets_table tbody tr.task_set_time_week_before_deadline td,
+table.task_sets_table tbody tr td li.task_set_time_week_before_deadline { color: darkcyan; }
 div.filter_wrap { margin-bottom: 10px; border-bottom: 1px solid silver; padding-bottom: 5px; }
 
 #tasks_sortable { list-style-type: none; }
