@@ -22,6 +22,9 @@
 
 VERSION 1.3.3 | 2017-03-10
 
+NEW Farebné označenie zostáv úloh podľa času pred a po limite odovzdávania.
+NEW [lang:english] Task sets are marked by color according to submission deadline time.
+
 CHANGE Nový test je automaticky označený ako hodnotený.
 CHANGE [lang:english] New test is automatically set as enabled for automatic grading.
 
